<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Catalogo">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item android:id="@+id/action_database"
        android:title="@string/action_bb"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item android:id="@+id/action_sync"
        android:title="@string/action_sync"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item android:id="@+id/action_filter"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/action_filtros"
        app:showAsAction="always" />
</menu>
