<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lukrodrigotrejo.autocor.catalogo.DetalleProducto"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/rubro"
                android:textSize="15dp"
                android:textColor="#017224"
                android:layout_gravity="center_vertical" />
            <Spinner
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/sp_depro_rubro"
                android:layout_marginLeft="2dp"
                android:textSize="14dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/marca"
                android:textSize="15dp"
                android:textColor="#017224"
                android:layout_gravity="center_vertical" />
            <Spinner
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/sp_depro_marca"
                android:layout_marginLeft="2dp"
                android:textSize="14dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tipoAuto"
                android:textSize="15dp"
                android:textColor="#017224"
                android:layout_gravity="center_vertical" />
            <Spinner
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/sp_depro_tipoAuto"
                android:layout_marginLeft="2dp"
                android:textSize="14dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:measureWithLargestChild="false">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/codigo"
                android:textSize="15dp"
                android:textColor="#017224"
                android:layout_gravity="center_vertical" />
            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_depro_codigo"
                android:layout_marginLeft="2dp"
                android:textSize="14dp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/descripcion"
                android:textSize="15dp"
                android:textColor="#017224"
                android:layout_gravity="center_vertical" />
            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_depro_descripcion"
                android:layout_marginLeft="2dp"
                android:textSize="14dp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/nroOriginal"
                android:textSize="15dp"
                android:textColor="#017224"
                android:layout_gravity="center_vertical" />
            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_depro_nrooriginal"
                android:layout_marginLeft="2dp"
                android:textSize="14dp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limpiar"
                android:id="@+id/btn_depro_limpiar"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:textAlignment="center" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buscar"
                android:id="@+id/btn_depro_buscar"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:onClick="buscar" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
